# libhybris

hybris/: Makefile.am  configure.ac
hybris/include/libmxmnetsdk/: mxmnetsdk.h
hybris/libmxmnetsdk/: Makefile.am  libmxmnetsdk.pc.in  mxmnetsdk.c
